ecmascript/parser/tests/test262-error-references/fail/8a331fdde7032f33.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/8a331fdde7032f33.js:1:1
  |
1 | "
  | ^

